--- a/mimi.html
+++ b/mimi.html
@@ -72,6 +72,7 @@ button.track:hover {
   align-items: flex-end;
   gap: 10px;
   max-width: 80%;
+  z-index: 10;
 }
 
 .message-box {
@@ -123,6 +124,38 @@ button.track:hover {
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
+}
+
+/* ✅ MOBILE FIX: prevents message box from covering track buttons */
+@media (max-width: 768px) {
+  body {
+    overflow-y: auto; /* allow scrolling */
+    cursor: auto; /* show normal cursor on mobile */
+  }
+
+  .message-container {
+    position: relative;
+    bottom: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    flex-direction: column;
+    align-items: center;
+    max-width: 90%;
+    margin: 1rem auto;
+  }
+
+  .message-box {
+    width: 100%;
+    text-align: center;
+  }
+
+  .message-container img.profile {
+    display: none; /* optional: hide profile image on phones */
+  }
+
+  #heart-cursor {
+    display: none; /* hide custom cursor on mobile */
+  }
 }
 </style>
 </head>
@@ -196,3 +229,5 @@ tracks.forEach(track => {
 </script>
 </body>
 </html>
+
+
